--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -542,28 +542,163 @@ be found in this \textbf{OSF repository}.
 \subsection{\texorpdfstring{\emph{Patella
 vulgata}}{Patella vulgata}}\label{patella-vulgata}
 
-\begin{itemize}
-\tightlist
-\item
-  Show one or a few of the LIBS maps as well as the line scans.
-\item
-  Show one the line scans together with isotope data.
-\item
-  Show correlation graphs.
-\end{itemize}
+The elemental imaging of \emph{P. vulgata} shells consistently showed
+repeating patterns of Mg/Ca intensity ratio changes with high Mg/Ca
+intensity ratios indicating and low ratios indicating low temperature
+periods. As examples, Figure~\ref{fig-Pat_LIBS} shows the
+2D-distribution of elemental ratios across the entire section of ORK-LT5
+and the preserved anterior side of QG1-7188-1 (additional maps can be
+found in the supplementaries). The repeating patterns are found across
+the calcitic layers that are exterior to the myostracum (layers m+2 and
+m+3) as well as the layers that are interior (m-2)
+\citep{Fenger2007-gf}. The layer m-1, which is also interior, consists
+of aragonite and is seen in Figure~\ref{fig-Pat_LIBS} in grey, as its
+Mg/Ca intensity ratio consistently falls below the range of interest
+(0.2 and above). Compared to other patelloid shells, whose interior is
+almost entirely made of aragonite, this layer is very thin.
 
-\begin{figure}[H]
+\begin{figure}
 
-{\centering \includegraphics{Manuscript_files/figure-pdf/Patella_Correlation_Graphs-1.pdf}
+\centering{
+
+\includegraphics{Manuscript_files/figure-pdf/fig-Pat_LIBS-1.pdf}
 
 }
 
-\caption{Correlation graphs for \emph{Patella vulgata} specimens}
+\caption{\label{fig-Pat_LIBS}Example LIBS maps and line scans of
+analysed specimens. (\emph{a+b}) ORK-LT and (\emph{c}+\emph{d})
+QG1-7188-1. Note that the ranges of Mg/Ca intensity ratios are not
+identical but are chosen arbitrarily to increase contrast. Areas in grey
+consist of low-Mg aragonite and fall outside the chosen colour-range.}
+
+\end{figure}%
+
+Both specimens in Figure~\ref{fig-Pat_LIBS} show increased Mg/Ca
+intensity ratios towards the outside of the shell and some degree of
+intra-increment variability. This is particularly visible in
+Figure~\ref{fig-Pat_LIBS} c, where Mg/Ca intensity ratios range from
+\textasciitilde0.5--0.7 in the first year of growth (9--12 mm on the
+y-axis). A similar pattern is visible in the interior m-2 layer of
+ORK-LT5 (Figure~\ref{fig-Pat_LIBS} a), which increase towards the
+anterior of the shell (0--10 mm on the x-axis).
+
+Line scans also indicate well the quasi-sinusoidal change of Mg/Ca
+intensity ratios expected based on the stable isotope data and
+elemental-imaging. That said, some of the variability of Mg/Ca intensity
+ratios within one season such as the summer period of QG1-7188-1 between
+0.5 and 2.0 mm distance to the shell edge (@fig-Pat\_LIBS d), is visible
+in a more dramatic manner than it appears in the 2D-image, showing the
+downside of line-scanning as opposed to the broader milling approach
+used for the analysis of carbonate powder \citep{Ferguson2011-zl}.
+
+Figure~\ref{fig-Pat_Comp} shows the line scan of ORK-LT5 in comparison
+to its δ\textsuperscript{18}O-values (similar graphs for other specimen
+can be found in the supplementaries). The measurements of the distance
+to the shell edge are not entirely identical, most likely because one
+growth increment can have several different distances. Depending on
+where one measures the distance and a line scan towards the interior
+would be shorter than a line scan towards the exterior. That said,
+increases and decreases of both proxies seem to mirror each other and to
+be well aligned.
+
+\begin{figure}
+
+\centering{
+
+\includegraphics{Manuscript_files/figure-pdf/fig-Pat_Comp-1.pdf}
+
+}
+
+\caption{\label{fig-Pat_Comp}Comparison of LIBS line-scan and sequential
+δ\textsuperscript{18}O-values of specimen ORK-LT5}
+
+\end{figure}%
+
+Aligning the records programmatically using dynamic time warping,
+allowed us to compare them directly to determine specimen-specific
+equations and quantify the correlation of both proxies
+(Figure~\ref{fig-Pat_Corr}). The equations for all specimens are
+different but the majority (barring one: QG1-7246-1) do seem to cluster
+around shared parameters (δ\textsuperscript{18}Ο = 0.6 -- 0.065 *
+Mg/Ca). The various coefficients of determination (R\textsuperscript{2})
+range between 0.81 (QG1-7246-1) and 0.95 (QG1-7189-2). These specimens
+are also the oldest and youngest, respectively, specimens, suggesting
+that lower growth rates and time averaging had a negative effect on the
+correlation of both proxies. The mean R\textsuperscript{2} value is
+0.89, suggesting a generally good fit between the two proxies.
+
+\begin{figure}
+
+\centering{
+
+\includegraphics{Manuscript_files/figure-pdf/fig-Pat_Corr-1.pdf}
+
+}
+
+\caption{\label{fig-Pat_Corr}Correlation graphs for \emph{Patella
+vulgata} specimens.}
 
 \end{figure}%
 
 \subsection{\texorpdfstring{\emph{Nacella}
 sp.}{Nacella sp.}}\label{nacella-sp.}
+
+\begin{figure}
+
+\centering{
+
+\includegraphics{Manuscript_files/figure-pdf/fig-Nac_LIBS-1.pdf}
+
+}
+
+\caption{\label{fig-Nac_LIBS}Example LIBS maps and line scans of
+analysed specimens. (\emph{a+b}) ND-1016-3 and (\emph{c}+\emph{d})
+NM-1016-3. Note that the ranges of Mg/Ca intensity ratios are not
+identical but are chosen arbitrarily to increase contrast. Areas in grey
+consist of low-Mg aragonite and fall outside the chosen colour-range.}
+
+\end{figure}%
+
+Both specimens in Figure~\ref{fig-Pat_LIBS} show increased Mg/Ca
+intensity ratios towards the outside of the shell and some degree of
+intra-increment variability. This is particularly visible in
+Figure~\ref{fig-Pat_LIBS} c, where Mg/Ca intensity ratios range from
+\textasciitilde0.5--0.7 in the first year of growth (9--12 mm on the
+y-axis). A similar pattern is visible in the interior m-2 layer of
+ORK-LT5 (Figure~\ref{fig-Pat_LIBS} a), which increase towards the
+anterior of the shell (0--10 mm on the x-axis).
+
+Line scans also indicate well the quasi-sinusoidal change of Mg/Ca
+intensity ratios expected based on the stable isotope data and
+elemental-imaging. That said, some of the variability of Mg/Ca intensity
+ratios within one season such as the summer period of QG1-7188-1 between
+0.5 and 2.0 mm distance to the shell edge (@fig-Pat\_LIBS d), is visible
+in a more dramatic manner than it appears in the 2D-image, showing the
+downside of line-scanning as opposed to the broader milling approach
+used for the analysis of carbonate powder \citep{Ferguson2011-zl}.
+
+Figure~\ref{fig-Pat_Comp} shows the line scan of ORK-LT5 in comparison
+to its δ\textsuperscript{18}O-values (similar graphs for other specimen
+can be found in the supplementaries). The measurements of the distance
+to the shell edge are not entirely identical, most likely because one
+growth increment can have several different distances. Depending on
+where one measures the distance and a line scan towards the interior
+would be shorter than a line scan towards the exterior. That said,
+increases and decreases of both proxies seem to mirror each other and to
+be well aligned.
+
+\begin{figure}
+
+\centering{
+
+\includegraphics{Manuscript_files/figure-pdf/fig-Nac_Comp-1.pdf}
+
+}
+
+\caption{\label{fig-Nac_Comp}Comparison of LIBS line-scan and sequential
+δ\textsuperscript{18}O-values of specimen ORK-LT5}
+
+\end{figure}%
 
 \begin{figure}[H]
 
