--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -643,6 +643,19 @@ vulgata} specimens.}
 \subsection{\texorpdfstring{\emph{Nacella}
 sp.}{Nacella sp.}}\label{nacella-sp.}
 
+The LIBS data for \emph{Nacella} sp. specimens is less straightforward
+with shells being much thinner and thus patterns being more difficult to
+make out. Both specimens (ND-1016-3 and NM-1016-3) shown as example in
+Figure~\ref{fig-Nac_LIBS} (see additional graphs in supplementaries)
+also experience increases of Mg/Ca intensity ratio towards the exterior
+of the shell, similar to the \emph{P. vulgata} specimens from Orkney.
+This intra-increment heterogeneity combined with the thinness of the
+shell, further complicates their analysis compared to \emph{P. vulgata}
+or other \emph{Patella} species \citep{Hausmann2019-fi}. Nevertheless,
+repeating patterns were visible in the anterior section of the shell,
+which were also mirrored in the inner layers (m-2) of specimens
+NM-1016-3 (Figure~\ref{fig-Nac_LIBS} c).
+
 \begin{figure}
 
 \centering{
@@ -655,27 +668,33 @@ sp.}{Nacella sp.}}\label{nacella-sp.}
 analysed specimens. (\emph{a+b}) ND-1016-3 and (\emph{c}+\emph{d})
 NM-1016-3. Note that the ranges of Mg/Ca intensity ratios are not
 identical but are chosen arbitrarily to increase contrast. Areas in grey
-consist of low-Mg aragonite and fall outside the chosen colour-range.}
+consist of low-Mg aragonite and fall outside the chosen colour-range.
+Note the inset in (\emph{c}) where the shell edge has been resampled
+using a higher resolution (50 µm instead of 100 µm) to better understand
+the Mg/Ca ratios at the shell edge.}
 
 \end{figure}%
 
-Both specimens in Figure~\ref{fig-Pat_LIBS} show increased Mg/Ca
-intensity ratios towards the outside of the shell and some degree of
-intra-increment variability. This is particularly visible in
-Figure~\ref{fig-Pat_LIBS} c, where Mg/Ca intensity ratios range from
-\textasciitilde0.5--0.7 in the first year of growth (9--12 mm on the
-y-axis). A similar pattern is visible in the interior m-2 layer of
-ORK-LT5 (Figure~\ref{fig-Pat_LIBS} a), which increase towards the
-anterior of the shell (0--10 mm on the x-axis).
+Interestingly, the Mg/Ca intensity ratios in the \emph{Nacella} sp.
+shells were much lower (0.05--0.30) than those seen in other patelloid
+species (e.g.~0.3--0.7 in \emph{Patella vulgata} above, or 0.5--1.5 in )
+using the same emission lines. This is particularly visible in
+Figure~\ref{fig-Nac_LIBS} c, where Mg/Ca intensity ratios range from
+\textasciitilde0.5--0.7 in \citep{Hausmann2023-ih}). While the intensity
+ratio depends chiefly on the chosen emission lines to calculate the
+proportion of the chosen Magnesium to the Calcium peak, the low ratios
+still indicate lower concentrations than seen elsewhere, or seen only in
+aragonitic parts of e.g.~\emph{Patella} shells.
 
-Line scans also indicate well the quasi-sinusoidal change of Mg/Ca
-intensity ratios expected based on the stable isotope data and
-elemental-imaging. That said, some of the variability of Mg/Ca intensity
-ratios within one season such as the summer period of QG1-7188-1 between
-0.5 and 2.0 mm distance to the shell edge (@fig-Pat\_LIBS d), is visible
-in a more dramatic manner than it appears in the 2D-image, showing the
-downside of line-scanning as opposed to the broader milling approach
-used for the analysis of carbonate powder \citep{Ferguson2011-zl}.
+Line scans reflect well the changes previously indicated by
+δ\textsuperscript{18}O values and Mg/Ca intensity ratios
+
+. That said, some of the variability of Mg/Ca intensity ratios within
+one season such as the summer period of QG1-7188-1 between 0.5 and 2.0
+mm distance to the shell edge (@fig-Pat\_LIBS d), is visible in a more
+dramatic manner than it appears in the 2D-image, showing the downside of
+line-scanning as opposed to the broader milling approach used for the
+analysis of carbonate powder \citep{Ferguson2011-zl}.
 
 Figure~\ref{fig-Pat_Comp} shows the line scan of ORK-LT5 in comparison
 to its δ\textsuperscript{18}O-values (similar graphs for other specimen
