--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -687,24 +687,19 @@ still indicate lower concentrations than seen elsewhere, or seen only in
 aragonitic parts of e.g.~\emph{Patella} shells.
 
 Line scans reflect well the changes previously indicated by
-δ\textsuperscript{18}O values and Mg/Ca intensity ratios
+δ\textsuperscript{18}O values and also indicate about two years of
+recorded growth. That said, the 2D imaging suggests that in both
+specimens a third summer can be added to the total record, which is not
+captured by the line scans. The variability seen in the \emph{P.
+vulgata} specimens above is not as strong, which might also be related
+to the fast and consistent growth rate of the shells.
 
-. That said, some of the variability of Mg/Ca intensity ratios within
-one season such as the summer period of QG1-7188-1 between 0.5 and 2.0
-mm distance to the shell edge (@fig-Pat\_LIBS d), is visible in a more
-dramatic manner than it appears in the 2D-image, showing the downside of
-line-scanning as opposed to the broader milling approach used for the
-analysis of carbonate powder \citep{Ferguson2011-zl}.
-
-Figure~\ref{fig-Pat_Comp} shows the line scan of ORK-LT5 in comparison
-to its δ\textsuperscript{18}O-values (similar graphs for other specimen
-can be found in the supplementaries). The measurements of the distance
-to the shell edge are not entirely identical, most likely because one
-growth increment can have several different distances. Depending on
-where one measures the distance and a line scan towards the interior
-would be shorter than a line scan towards the exterior. That said,
-increases and decreases of both proxies seem to mirror each other and to
-be well aligned.
+Figure~\ref{fig-Nac_Comp} shows the line scans of ND-1016-3 and
+NM-1016-3 in comparison to their δ\textsuperscript{18}O-values (similar
+graphs for the other \emph{Nacella} sp. specimen can be found in the
+supplementaries). Compared to the \emph{P. vulgata} records, these
+mirror each other much more clearly, due to the brief period recorded in
+the shells and its simple make-up.
 
 \begin{figure}
 
@@ -719,13 +714,33 @@ be well aligned.
 
 \end{figure}%
 
-\begin{figure}[H]
+The \emph{Nacella} sp. specimens showed similarly clustered
+correlations, which interestingly were not grouped by species. In fact,
+specimens ND-1016-3 (\emph{Nacella deaureata)} and NM-1016-3
+(\emph{Nacella magellanica}) are almost identical in their fitted
+equations (Figure~\ref{fig-Nac_Corr}). Both also share a high
+coefficient of determination (R\textsuperscript{2}) of 0.95 and 0.92
+respectively, with the remaining specimens being somewhat lower
+(R\textsuperscript{2} = 0.76 for ND-1016-4 and R\textsuperscript{2}=0.84
+for NM-1016-3). The mean R\textsuperscript{2} value for each
+\emph{Nacella} species is 0.86 for \emph{Nacella deaureata} and 0.88 for
+\emph{Nacella magellanica}. Why two specimens of different species are
+so well aligned is not entirely certain and randomness cannot for now be
+ruled out. That said, since they both have a high R\textsuperscript{2}
+value, it might just be that they were both minimally affected by
+factors other than SST, including the sampling location of our line
+scans.
 
-{\centering \includegraphics{Manuscript_files/figure-pdf/Nacella_Correlation_Graphs-1.pdf}
+\begin{figure}
+
+\centering{
+
+\includegraphics{Manuscript_files/figure-pdf/fig-Nac_Corr-1.pdf}
 
 }
 
-\caption{Correlation graphs for \emph{Nacella} sp. specimens}
+\caption{\label{fig-Nac_Corr}Correlation graphs for \emph{Nacella} sp.
+specimens}
 
 \end{figure}%
 
